# vocab-tuister

./: .better-commits.json  .coveragerc  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .pre-commit-config.yaml  .roorules  AGENTS.md  GEMINI.md  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml  codecov.yml  gcse-book1-chap1.txt  go.mod  go.sum  go.work  go.work.sum  mypy.ini  poe_tasks.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test-data.json  tox.ini  tox.toml  transfero-refactor-plan.md  vocab-tuister-server.spec
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: build-python.yml  build.yml  check.yml  copilot-setup-steps.yml  coverage.yml  golangci-lint-fix-push-pr.yml  interrogate.yml  lint-golang.yml  lint.yml
assets/: gcse-book1-chap1.txt  gcse-book1-chap3.txt  gcse-book1-chap4.txt  gcse-book1-chap6.txt  gcse-book2-chap7.txt  gcse-book2-chap8.txt  gcse-book2-chap9.txt
assets/clc4/: clc4-book1-stage1.txt  clc4-book1-stage10.txt  clc4-book1-stage11.txt  clc4-book1-stage12.txt  clc4-book1-stage2.txt  clc4-book1-stage3.txt  clc4-book1-stage6.txt  clc4-book1-stage8.txt  clc4-book1-stage9.txt  clc4-book2-stage13.txt  clc4-book2-stage14.txt  clc4-book2-stage15.txt  clc4-book2-stage17.txt  clc4-book2-stage20.txt  clc4-book3-stage21.txt  clc4-book3-stage22.txt  clc4-book3-stage23.txt  clc4-book3-stage24.txt  clc4-book3-stage28.txt  clc4-book4-stage29.txt  clc4-book4-stage30.txt  clc4-book4-stage32.txt  clc4-book4-stage34.txt  clc4-book5-stage35.txt  clc4-book5-stage37.txt  clc4-book5-stage38.txt  clc4-book5-stage39.txt
assets/latin-to-gcse/: gcse-book1-chap2.txt  gcse-book1-chap3.txt  gcse-book1-chap4.txt  gcse-book1-chap5.txt  gcse-book1-chap6.txt  gcse-book2-chap10.txt  gcse-book2-chap7.txt  gcse-book2-chap8.txt  gcse-book2-chap9.txt
docs/: README.md  pydoclint-baseline.txt
docs/dev/: README.rst  random.rst  transfero.rst
docs/dev/accido/: endings.rst  intro.rst
proto/vocab_tuister/v1/: endingcomponents.proto  question.proto  sessionconfig.proto  vocab_service.proto  vocablist.proto
scripts/: badges.sh  build-gh.ps1  build.bat  build.ps1  build.sh  coverage.sh  generate.sh  requirements.sh  tests.sh
src/: __init__.py  __main__.py  generate.go  main.go  structs_generator.go
src/_vendor/: __init__.py
src/_vendor/go-jsonstruct/: README.md  generator.go  (+3 more)
src/assets/: embed.go
src/core/: __init__.py
src/scripts/: __init__.py  create_adjective_no_adverb.py  create_adjective_with_adverb.py  create_question_json.py  create_sessionconfig_json.py  create_settings_json.py  protoc-gen-python_betterproto2
src/server/: __init__.py  _json_encode.py  app.py  exceptions.py  json_encode.py
src/server_cli/: __init__.py
src/utils/: __init__.py  compact_function.py  compare.py  compare_function.py  dict_changes.py  duplicates.py  logger.py  set_functions.py  typeddict_validator.py
stubs/: ruff.toml
stubs/aenum/: __init__.pyi  _common.pyi  _constant.pyi  _enum.pyi  _py3.pyi  _tuple.pyi  allowlist
stubs/colors/: __init__.pyi  allowlist  colors.pyi  csscolors.pyi
stubs/dill/: __init__.pyi  _dill.pyi  allowlist
stubs/lemminflect/: __init__.pyi  allowlist
stubs/nltk/: __init__.pyi  allowlist  data.pyi
tests/: conftest.py  jsonencode_test.py  ruff.toml  run_all_tests.py  test-inbuilt-vocab-files.sh  test_jsonencode.py
tests/accido_test/: accido_timing.py  adjective_adverb_edge_cases_test.py  adjective_endings_test.py  adjective_test.py  endingcomponents_test.py  multipleendings_test.py  noun_endings_test.py  noun_test.py  pronoun_test.py  regular_test.py  syllables_test.py  test_adjective.py  test_multiplemeanings.py  test_noun.py  test_pronoun.py  test_regular.py  test_verb.py  test_word.py  verb_endings_test.py  verb_test.py  word_test.py
tests/examples/: example-config.json  example-list.txt  example-session-config.json
tests/integration/: server_session_integration_test.py  server_settings_integration_test.py  test_server_session_integration.py  test_server_settings_integration.py
tests/lego_test/: cache_test.py  lego_timing.py  reader_test.py  saver_test.py  test_reader.py  vocablist_test.py
tests/rogo_test/: class_exclusion_test.py  ending_exclusion_test.py  errors_test.py  inflect_question_test.py  multiplechoice_engtolat_test.py  multiplechoice_lattoeng_test.py  parse_question_test.py  principalparts_question_test.py  test_class_exclusion.py  test_ending_exclusion.py  test_errors.py  test_inflect_question.py  test_multiplechoice_engtolat.py  test_multiplechoice_lattoeng.py  test_parse_question.py  test_principalparts_question.py  test_typein_engtolat.py  test_typein_lattoeng.py  test_word_exclusion.py  typein_engtolat_test.py  typein_lattoeng_test.py  word_exclusion_test.py
tests/src_core_accido/: accido_timing.py  endingcomponents_test.py  multiplemeanings_test.py  pronoun_test.py  regular_test.py  verb_test.py
tests/src_core_lego/: cache_test.py  lego_timing.py  reader_test.py  saver_test.py  vocablist_test.py
tests/src_core_rogo/: class_exclusion_test.py  ending_exclusion_test.py  errors_test.py  inflect_question_test.py  multiplechoice_engtolat_test.py  multiplechoice_lattoeng_test.py  parse_question_test.py  principalparts_question_test.py  typein_engtolat_test.py  typein_lattoeng_test.py  word_exclusion_test.py
tests/src_core_transfero/: adjectiveinflection_test.py  adverbinflection_test.py  nouninflection_test.py  pronouninflection_test.py  verbinflection_test.py
tests/src_server/: jsonencode_test.py
tests/transfero_test/: adjectiveinflection_test.py  adjtoadv_test.py  adverbinflection_test.py  nouninflection_test.py  pronouninflection_test.py  synonyms_test.py  test_adverbinflection.py  test_pronouninflection.py  test_synonyms.py  test_verbinflection.py  test_wordinflection.py  verbinflection_test.py  wordinflection_test.py
tests/utils_test/: compact_function_test.py  compare_function_test.py  duplicates_test.py  test_compact_function.py  typeddict_validator_test.py
(+499 files in other folders)
